--- a/FitnessTracker.V1/FitnessTracker.V1.csproj
+++ b/FitnessTracker.V1/FitnessTracker.V1.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+    <UserSecretsId>3cfe523f-e111-46a6-8ddc-d92ff8e3d650</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
