--- a/FitnessTracker.V1/FitnessTracker.V1.csproj
+++ b/FitnessTracker.V1/FitnessTracker.V1.csproj
@@ -32,5 +32,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\ViewSession\SeanceCompleteHelper\" />
+    <Folder Include="Services\ProgrammeGeneration\ProgrammePredefini\" />
+  </ItemGroup>
 	
 </Project>
