--- a/FitnessTracker.V1/FitnessTracker.V1.csproj
+++ b/FitnessTracker.V1/FitnessTracker.V1.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.17" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
     <PackageReference Include="Supabase" Version="1.1.1" />
+	  <PackageReference Include="ChartJs.Blazor.Fork" Version="2.0.2" />
+
+
   </ItemGroup>
 
   <ItemGroup>
